<resources>
    <string name="app_name">Приложение для курсов</string>
    <string name="sales_icon">Sales</string>
    <string name="contacts_text">Контакты</string>
    <string name="about_text">О нас</string>
    <string name="main_scene_text">Главная</string>
    <string name="logo_of_app_1">Courses App</string>
    <string name="course_start_date">Старт обучения:</string>
    <string name="course_level">Уровень:</string>
    <string name="course_desc">За программу Вы изучите построение графических приложений под ПК, разработку веб-сайтов на основе Java, изучите построение полноценных Android приложений и отлично изучите сам язык Java!</string>
</resources>